refactor to use grp exposed service as default
